--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,9 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  
+}
+#root{
+  background-color: aqua;
+  height: 100vh;
 }
