--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   
 }
 #root{
   background-color: rgb(173, 171, 171);
   height: 100vh;
+}
+
+body{
+  overflow: hidden;
 }
