--- a/src/components/Home/style.module.css
+++ b/src/components/Home/style.module.css
@@ -1,4 +1,67 @@
-.containerInicio{
+.containerInicio {
     display: flex;
     flex-direction: column;
+    background-color: #212C3A;
+    height: 100vh;
+    align-items: center;
+    padding: 25px;
+
+    .banerInicio {
+        padding: 25px;
+        display: flex;
+        flex-direction: row;
+        background-color: #2B3B4F;
+        border-radius: 10px;
+        gap: 45px;
+        justify-content: center;
+        width: 80%;
+
+        .conteudoBaner {
+            display: flex;
+            flex-direction: column;
+            max-width: 650px;
+            width: 100%;
+
+            justify-content: space-between;
+
+            .tituloBaner {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                h2 {
+                    color: white;
+                    font-size: 40px;
+                }
+
+                img {
+                    padding-bottom: 5px;
+                }
+            }
+
+            h3 {
+                color: white;
+                font-size: 25px;
+
+            }
+
+            .botaoCadastrar {
+                width: 50%;
+                padding: 15px;
+                color: #197EFF;
+                font-size: 25px;
+                border-radius: 12px;
+            }
+        }
+
+        .imagensCamp {
+            img {
+                object-fit: cover;
+                width: 330px;
+                border-radius: 10px;
+            }
+        }
+
+
+    }
 }
