--- a/src/components/Home/style.module.css
+++ b/src/components/Home/style.module.css
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: column;
     background-color: #212C3A;
-    height: 100vh;
     align-items: center;
     padding: 25px;
-
+    
+.conteudo{
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    width: 90%;
     .banerInicio {
         padding: 25px;
         display: flex;
@@ -14,7 +18,7 @@
         border-radius: 10px;
         gap: 45px;
         justify-content: center;
-        width: 80%;
+        width: 100%;
 
         .conteudoBaner {
             display: flex;
@@ -64,4 +68,6 @@
 
 
     }
+}
+   
 }
