--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -38,10 +38,12 @@
 
     }
 }
-.sidenav::-webkit-scrollbar{
+
+.sidenav::-webkit-scrollbar {
     background: transparent;
-   
+
 }
+
 .bloco:hover {
     background-color: #294e7b;
     border-radius: 8px;
@@ -58,7 +60,16 @@
     flex-direction: column;
     gap: 12px;
     padding: 10px;
+    overflow: scroll;
 
+    .caixa {
+        padding: 5px 6px;
+        transition: 0.7s;
+        border-radius: 8px;
+        a {
+            text-decoration: none;
+        }
+    }
     .elementos {
 
         padding: 10px;
@@ -66,6 +77,7 @@
         flex-direction: column;
         align-items: center;
         border-bottom: white 1px solid;
+      
 
         .icones {
             display: flex;
@@ -73,6 +85,7 @@
             align-items: center;
             gap: 14px;
 
+           
         }
     }
 
@@ -90,4 +103,15 @@
 
         }
     }
+}
+
+.caixa:hover {
+    background-color: #294e7b;
+    border-radius: 8px;
+ 
+    transform: scale(1.05);
+}
+.sidebarOverlay::-webkit-scrollbar {
+    background: transparent;
+
 }
