--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    overflow: scroll;
+    overflow: auto;
 
     .elementos {
         background-color: #2B3B4F;
