--- a/src/components/Carrosel6/style.module.css
+++ b/src/components/Carrosel6/style.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    flex: 1;
 
     .tituloCima {
         padding-bottom: 50px;
@@ -65,7 +66,7 @@
     padding: 15px;
     border-radius: 15px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     transition: transform 0.5s ease;
     /* Adiciona a transição */
     gap: 10px;
