--- a/src/components/Hero/syle.module.css
+++ b/src/components/Hero/syle.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 60vh;
     background-color: #080c1c;
-
+border-radius: 12px;
 
     video {
         position: absolute;
@@ -13,19 +13,19 @@
         height: 100%;
         object-fit: cover;
         z-index: 0;
-
+        border-radius: 12px;
     }
 
 
     .conteudo {
-
+        border-radius: 12px;
         position: absolute;
         z-index: 2;
         width: 100%;
         height: 100%;
         top: 0;
         right: 0;
-        padding: 32px;
+        padding: 50px;
         color: white;
         display: flex;
         flex-direction: column;
@@ -36,26 +36,26 @@
                 rgba(0, 0, 0, 0) 100%);
 
         .infoJogo {
-            font-size: 26px;
+            font-size: 24px;
         }
     }
 
     h2 {
-        margin-bottom: 12px;
-        font-size: 16px;
+        
+        font-size: 14px;
         font-weight: 700;
     }
 
     h1 {
-        margin-bottom: 12px;
-        font-size: 50px;
+        
+        font-size: 45px;
         font-weight: 700;
     }
 
     p {
 
         font-size: 16px;
-        max-width: 400px;
+        max-width: 450px;
     }
 
     .infoMeta {
@@ -68,7 +68,9 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-
+.odd{
+    padding:10px 15px;
+}
         }
     }
 }
@@ -103,17 +105,19 @@
 
 .botaoInfo {
     display: flex;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 25px;
     border: 1px solid black;
     padding: 14px;
-    border-radius: 12px;
-border: 0;
+    border-radius: 10px;
+    border: 0;
     align-items: center;
-    color: #2994f1;
+    color: #ffff;
+    background-color: #197EFF;
     height: 80%;
     transition: 0.5s;
-cursor: pointer;
+    cursor: pointer;
+
     &:hover {
         transition: 0.5s;
         transform: scale(1.1);
