--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -25,7 +25,7 @@
             padding: 2px 6px;
 
             a {
-
+                font-size: 15px;
                 padding: 5px 12px;
                 text-decoration: none;
                 color: white;
@@ -60,16 +60,18 @@
     flex-direction: column;
     gap: 12px;
     padding: 10px;
-    overflow: scroll;
+    overflow: auto;
 
     .caixa {
         padding: 5px 6px;
         transition: 0.7s;
         border-radius: 8px;
+
         a {
             text-decoration: none;
         }
     }
+
     .elementos {
 
         padding: 10px;
@@ -77,7 +79,7 @@
         flex-direction: column;
         align-items: center;
         border-bottom: white 1px solid;
-      
+
 
         .icones {
             display: flex;
@@ -85,7 +87,7 @@
             align-items: center;
             gap: 14px;
 
-           
+
         }
     }
 
@@ -108,9 +110,10 @@
 .caixa:hover {
     background-color: #294e7b;
     border-radius: 8px;
- 
+
     transform: scale(1.05);
 }
+
 .sidebarOverlay::-webkit-scrollbar {
     background: transparent;
 
